--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "@nestjs/common": "^10.0.0",
         "@nestjs/core": "^10.0.0",
+        "@nestjs/mapped-types": "^2.0.4",
         "@nestjs/platform-express": "^10.0.0",
         "@prisma/client": "^5.9.1",
         "reflect-metadata": "^0.1.13",
