--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "@nestjs/mapped-types": "^2.0.4",
         "@nestjs/platform-express": "^10.0.0",
         "@prisma/client": "^5.9.1",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1"
     },
