--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "class-validator": "^0.14.1",
         "joi": "^17.12.1",
         "reflect-metadata": "^0.1.13",
-        "rxjs": "^7.8.1"
+        "rxjs": "^7.8.1",
+        "twilio": "^4.21.0"
     },
     "devDependencies": {
         "@faker-js/faker": "^8.4.0",
