--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@nestjs/jwt": "^10.2.0",
         "@nestjs/mapped-types": "^2.0.4",
         "@nestjs/platform-express": "^10.0.0",
+        "@nestjs/swagger": "^7.3.0",
         "@prisma/client": "^5.9.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
