--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "scripts": {
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "start": "nest start",
-        "start:dev": "nest start --watch",
+        "start": "dotenv -e .env.production nest start",
+        "start:dev": "dotenv -e .env.development nest start --watch",
         "start:debug": "nest start --debug --watch",
-        "start:prod": "node dist/main",
+        "start:prod": "dotenv -e .env.production node dist/src/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "test:e2e": "dotenv -e .env.test -- jest --config ./test/jest-e2e.json",
+        "migrate:dev": "dotenv -e .env.development -- npx prisma migrate dev",
+        "migrate:test": "dotenv -e .env.test -- npx prisma migrate dev",
+        "migrate:dev:reset": "dotenv -e .env.development -- npx prisma migrate reset",
+        "migrate:test:reset": "dotenv -e .env.test -- npx prisma migrate reset --force",
+        "seed:dev": "dotenv -e .env.development -- prisma db seed",
+        "seed:test": "dotenv -e .env.test -- prisma db seed"
     },
     "prisma": {
         "seed": "ts-node prisma/seed.ts"
@@ -49,6 +55,7 @@
         "@types/supertest": "^6.0.0",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
+        "dotenv-cli": "^7.3.0",
         "eslint": "^8.42.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.0",
