--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "license": "UNLICENSED",
     "scripts": {
         "build": "nest build",
-        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"prisma/**/*.ts\"",
         "start": "dotenv -e .env.production nest start",
         "start:dev": "dotenv -e .env.development nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "dotenv -e .env.production node dist/src/main",
-        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "lint": "eslint \"{src,apps,libs,test,prisma}/**/*.ts\" --fix",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
